# Xviz2d

./: CMakeLists.txt  clean.bat  imgui.ini  readme.md  rebuild_debug.bat  requirements.txt  run_demo.sh  vcpkg.json
apps/: readme.md
apps/emplanner/: main.cpp  readme.md
apps/xviz_bridge/: readme.md
demo/: CMakeLists.txt
demo/client/: client.py
demo/log_demo/: CMakeLists.txt  log_demo.cpp
demo/python_client/: xviz_msgs_pb2.py
demo/rpc_demo/client/: CMakeLists.txt
demo/rpc_demo/server/: CMakeLists.txt
demo/video_layer_demo/: CMakeLists.txt  main.cpp  video_layer_demo.cpp  video_layer_demo.h
demo/xivz_app/: CMakeLists.txt  demo_draw.h  xviz_app.cpp
src/: CMakeLists.txt  XvizApp.vcxproj  XvizApp.vcxproj.filters
src/app/: app.cpp  app.h
src/basis/: bound_box.h  circular_buffer.h  data_types.h  defines.h  file.h  logger.h  rpc_functions.h  signal.h  sil_util.h  string_enum.h  thread_safe_map.h  tic_toc.h  transform.h  xviz_math.h  xviz_time.h  xviz_util.h
src/communication/: readme.md
src/msg_convert/: msg_convert.cpp  msg_convert.h
src/proto/: xviz_msgs.proto
src/scene/: imgui.ini  rolling_buffer.h  scene_color.h  scene_data_types.h  scene_draw.cpp  scene_draw.h  scene_manager.cpp  scene_manager.h  scene_objects.h  scene_options.h  scene_view.h  tf_tree.cpp
src/scene/tf_tree/: tf_tree.h
src/scene_object/: readme.md  scene_circle.h  scene_circle_array.h  scene_marker.h  scene_marker_array.h  scene_object.h  scene_object_options.h  scene_object_type.h  scene_objects.h  scene_path.h  scene_path_array.h  scene_point_cloud.h  scene_polygon.h  scene_polygon_array.h  scene_pose.h  scene_pose_array.h  scene_transform_node.h
src/ui/: base_layer.h  main_layer.cpp  main_layer.h  plot_layer.cpp  plot_layer.h  scene_edit_layer.cpp  scene_edit_layer.h  scene_layer.cpp  scene_layer.h  ui_context.h
src/video/: ffmpeg_headers.h  texture.cpp  texture.h  video_capture.cpp  video_capture.h
src/window/: window.cpp  window.h
src/xviz_api/: xviz_api.h
src/xviz_client/: CMakeLists.txt  xviz_client.cpp  xviz_client.h
src/xviz_msgs/: CMakeLists.txt
src/xviz_msgs/pb/: xviz_msgs.pb.cc  xviz_msgs.pb.h  xviz_msgs_pb2.py
src/xviz_msgs/proto/: xviz_msgs.proto
src/xviz_server/: readme.md  xviz_server.cpp  xviz_server.h
